# ApiMonitor

./: .gitignore  ApiMonitor  DAE调用API Mnitor.md  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/softsec/mobsec/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  fd2path.cpp  tool.cpp
app/src/main/java/com/softsec/mobsec/dae/apimonitor/: MyApplication.kt
app/src/main/java/com/softsec/mobsec/dae/apimonitor/broadcastreceiver/: DaeBCReceiver.kt
app/src/main/java/com/softsec/mobsec/dae/apimonitor/hook/: XposedHide.java  XposedModule.java
app/src/main/java/com/softsec/mobsec/dae/apimonitor/service/: MainService.kt
app/src/main/java/com/softsec/mobsec/dae/apimonitor/tools/: ConsoleTool.kt
app/src/main/java/com/softsec/mobsec/dae/apimonitor/ui/: ChooseAppActivity.kt  MainActivity.kt  RecordContentActivity.kt  RecordListActivity.kt
app/src/main/java/com/softsec/mobsec/dae/apimonitor/util/: Config.kt  CrashHandler.kt  DataUtil.kt  FileUtil.java  HttpUtil.kt  InfoUtil.kt  ResultParser.kt  Util.java  (+1 more)
app/src/main/res/drawable/: background.xml
app/src/main/res/layout/: activity_chooseapp.xml  activity_content_record.xml  activity_list_record.xml  activity_main.xml  item_chooseapp.xml  item_result.xml  layout.xml  listview_result.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/softsec/mobsec/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+194 files in other folders)
